Ajuste nas metricas

--- a/Genie.ipynb
+++ b/Genie.ipynb
@@ -81,21 +81,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def labelClusters(clusters, target):\n",
+    "from sklearn.metrics.cluster import fowlkes_mallows_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def labelClusters2(clusters, target, data):\n",
     "    mySet = set(clusters)\n",
     "    resultList = []\n",
     "    for i in mySet:\n",
-    "        myClasses = []\n",
+    "        myPos = []\n",
     "        for j in range(len(clusters)):\n",
     "            if (clusters[j] == i):\n",
-    "                myClasses.append(target[j]) \n",
-    "        resultList.append(max(set(myClasses), key=myClasses.count))\n",
+    "                myPos.append(j)\n",
+    "        \n",
+    "        myData = []\n",
+    "        myTarget = []\n",
+    "        for k in range(len(myPos)):\n",
+    "            myData.append(data[j])\n",
+    "            myTarget.append(target[j])\n",
+    "        \n",
+    "        centroid = []\n",
+    "        for l in range(len(myData[0])):\n",
+    "            mySum = 0\n",
+    "            for m in range(len(myData)):\n",
+    "                mySum += myData[m][l]\n",
+    "            centroid.append(mySum/len(myData))\n",
+    "        \n",
+    "        if (len(myData) > 4):\n",
+    "            neigh = KNeighborsClassifier(n_neighbors=5)\n",
+    "        else:\n",
+    "            neigh = KNeighborsClassifier(n_neighbors=1)\n",
+    "            \n",
+    "        neigh.fit(myData, myTarget)\n",
+    "        neigh.predict(centroid)\n",
+    "        resultList.append(neigh.predict(centroid)[0])\n",
     "    \n",
     "    mySetArray = []\n",
     "    for i in mySet:\n",
@@ -112,24 +155,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 137,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def gini(x):\n",
-    "    # (Warning: This is a concise implementation, but it is O(n**2)\n",
-    "    # in time and memory, where n = len(x).  *Don't* pass in huge\n",
-    "    # samples!)\n",
-    "\n",
-    "    # Mean absolute difference\n",
-    "    mad = np.abs(np.subtract.outer(x, x)).mean()\n",
-    "    # Relative mean absolute difference\n",
-    "    rmad = mad/np.mean(x)\n",
-    "    # Gini coefficient\n",
-    "    g = 0.5 * rmad\n",
-    "    return g"
+    "def labelClusters(clusters, target):\n",
+    "    mySet = set(clusters)\n",
+    "    resultList = []\n",
+    "    for i in mySet:\n",
+    "        myClasses = []\n",
+    "        for j in range(len(clusters)):\n",
+    "            if (clusters[j] == i):\n",
+    "                myClasses.append(target[j])\n",
+    "        resultList.append(max(set(myClasses), key=myClasses.count))\n",
+    "    \n",
+    "    mySetArray = []\n",
+    "    for i in mySet:\n",
+    "        mySetArray.append(i)\n",
+    "        \n",
+    "    labels = []  \n",
+    "    for i in range(len(clusters)):\n",
+    "        for j in range(len(mySetArray)):\n",
+    "            if (clusters[i] == mySetArray[j]):\n",
+    "                labels.append(resultList[j])\n",
+    "    return labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def gini2(arr):\n",
+    "    \n",
+    "    somai = 0\n",
+    "    somatot = arr[-1]\n",
+    "    for i in range(len(arr)-1):\n",
+    "        somaj = 0\n",
+    "        for j in range(i+1, len(arr)):\n",
+    "            somaj += abs(arr[i] - arr[j])\n",
+    "        somai += somaj\n",
+    "        somatot += arr[i]\n",
+    "    mult = (len(arr) - 1) * somatot\n",
+    "    \n",
+    "    return (somai/mult)"
    ]
   },
   {
@@ -157,7 +251,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5]"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "menorCluster([0,9,0,9,0,9,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
    "metadata": {
     "collapsed": true
    },
@@ -166,16 +280,15 @@
     "def menorCluster(clusters):\n",
     "    mySet = set(clusters)\n",
     "    minimo = len(clusters)\n",
-    "    menor = len(clusters)\n",
+    "    \n",
     "    for i in mySet:\n",
     "        if((clusters.count(i)) < minimo):\n",
     "            minimo = clusters.count(i)\n",
-    "            menor = i\n",
     "            \n",
     "    myList = []\n",
     "    \n",
     "    for j in range(len(clusters)):\n",
-    "        if(clusters[j]==menor):\n",
+    "        if(clusters.count(clusters[j])==minimo):\n",
     "            myList.append(j)\n",
     "            \n",
     "    return myList"
@@ -183,94 +296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def genieLinkage(data, limiar, clusterNumber):\n",
-    "    \n",
-    "    clusters = {}\n",
-    "    row_index = 0\n",
-    "    col_index = 0\n",
-    "    array = []\n",
-    "    \n",
-    "\n",
-    "    for n in range(data.shape[0]):\n",
-    "        array.append(n)\n",
-    "    \n",
-    "        \n",
-    "    clusters[0] = array.copy()\n",
-    "\n",
-    "    #finding minimum value from the distance matrix\n",
-    "    #note that this loop will always return minimum value from bottom triangle of matrix\n",
-    "    for k in range(1, data.shape[0]):\n",
-    "        min_val = sys.maxsize\n",
-    "        \n",
-    "        if(gini(counting(clusters[k-1])) <= limiar):\n",
-    "            for i in range(0, data.shape[0]):\n",
-    "                for j in range(i, data.shape[1]):\n",
-    "                    if(data[i][j]<min_val):\n",
-    "                        min_val = data[i][j]\n",
-    "                        row_index = i\n",
-    "                        col_index = j\n",
-    "        else:\n",
-    "            iList = menorCluster(clusters[k-1])\n",
-    "            for i in iList:\n",
-    "                for j in range(0, data.shape[0]):\n",
-    "                    if(j not in iList):\n",
-    "                        if(data[i][j]<min_val):\n",
-    "                            min_val = data[i][j]\n",
-    "                            row_index = i\n",
-    "                            col_index = j\n",
-    "\n",
-    "        array = clusters[k-1].copy()\n",
-    "        minimum = min(array[row_index],array[col_index])\n",
-    "        maximum = max(array[row_index],array[col_index])\n",
-    "        \n",
-    "        for n in range(len(array)):\n",
-    "            if(array[n]==maximum):\n",
-    "                array[n] = minimum\n",
-    "        clusters[k] = array.copy()\n",
-    "        \n",
-    "        for i in range(len(array)):\n",
-    "            for j in range(len(array)):\n",
-    "                if(array[i]==array[j]):\n",
-    "                    data[i][j] = sys.maxsize\n",
-    "                    \n",
-    "        if (len(set(clusters[k])) == clusterNumber):\n",
-    "            return clusters[k]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 237,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 1, 'f'], [4, 2, 't'], [9, 4, 'afsd']]"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l = [[0, 1, 'f'], [4, 2, 't'], [9, 4, 'afsd']]\n",
-    "l.sort(key=lambda x: x[0])\n",
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "def genieLinkage2(data, limiar, clusterNumber):\n",
@@ -296,12 +323,10 @@
     "    dists.sort(key=lambda x: x[0])\n",
     "    pos = 0\n",
     "\n",
-    "    #finding minimum value from the distance matrix\n",
-    "    #note that this loop will always return minimum value from bottom triangle of matrix\n",
     "    for k in range(1, data.shape[0]):\n",
     "        min_val = sys.maxsize\n",
     "        \n",
-    "        if(gini(counting(clusters[k-1])) <= limiar):\n",
+    "        if(gini2(counting(clusters[k-1])) <= limiar):\n",
     "            for i in range(pos, len(dists)):\n",
     "                if(dists[i][0] == data[dists[i][1]][dists[i][2]]):\n",
     "                    pos = i\n",
@@ -313,11 +338,10 @@
     "            iList = menorCluster(clusters[k-1])\n",
     "            for i in iList:\n",
     "                for j in range(0, data.shape[0]):\n",
-    "                    if(j not in iList):\n",
-    "                        if(data[i][j]<min_val):\n",
-    "                            min_val = data[i][j]\n",
-    "                            row_index = i\n",
-    "                            col_index = j\n",
+    "                    if(data[i][j]<min_val):\n",
+    "                        min_val = data[i][j]\n",
+    "                        row_index = i\n",
+    "                        col_index = j\n",
     "\n",
     "        array = clusters[k-1].copy()\n",
     "        minimum = min(array[row_index],array[col_index])\n",
@@ -334,41 +358,12 @@
     "                    data[i][j] = sys.maxsize\n",
     "                    \n",
     "        if (len(set(clusters[k])) == clusterNumber):\n",
-    "            return clusters[k]\n",
-    "        "
+    "            return clusters[k]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def genie(dataset, target, limiar, clusterNumber):\n",
-    "    \n",
-    "#     dataX = dataset.loc[:,dataset.columns[:-1]].values\n",
-    "#     dataY = dataset.loc[:,[dataset.columns[-1]]].values\n",
-    "    dataX = dataset.values\n",
-    "    dataY = target[0]\n",
-    "    \n",
-    "    dataDistances = pairwise_distances(dataX,metric='euclidean')\n",
-    "    #making all the diagonal elements infinity \n",
-    "    np.fill_diagonal(dataDistances,sys.maxsize)\n",
-    "    \n",
-    "    clusters = genieLinkage(dataDistances, limiar, clusterNumber)\n",
-    "    \n",
-    "    labels = labelClusters(clusters, dataY)\n",
-    "    \n",
-    "    fmScore = f1_score(dataY, labels, average='micro')\n",
-    "    \n",
-    "    return fmScore"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 117,
    "metadata": {
     "collapsed": true
    },
@@ -388,8 +383,10 @@
     "    clusters = genieLinkage2(dataDistances, limiar, clusterNumber)\n",
     "    \n",
     "    labels = labelClusters(clusters, dataY)\n",
+    "    #labels = labelClusters2(clusters,dataY, dataX)\n",
     "    \n",
-    "    fmScore = f1_score(dataY, labels, average='micro')\n",
+    "    #fmScore = f1_score(dataY, labels, average='micro')\n",
+    "    fmScore = fowlkes_mallows_score(dataY, labels)\n",
     "    \n",
     "    return fmScore"
    ]
@@ -426,8 +423,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import time"
@@ -435,36 +434,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.895238095238\n",
-      "0.3586111068725586\n"
-     ]
-    }
-   ],
-   "source": [
-    "t1 = time.time()\n",
-    "print(genie(iris5, iris5labels, 0.3, 3))\n",
-    "t2 = time.time()\n",
-    "print(t2 - t1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.895238095238\n",
-      "0.23567605018615723\n"
+      "0.847263910606\n",
+      "0.3553299903869629\n"
      ]
     }
    ],
@@ -477,36 +455,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.823333333333\n",
-      "9.737985134124756\n"
-     ]
-    }
-   ],
-   "source": [
-    "t1 = time.time()\n",
-    "print(genie(pathbased, pathbasedlabels, 0.6, 3))\n",
-    "t2 = time.time()\n",
-    "print(t2 - t1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.823333333333\n",
-      "4.458505868911743\n"
+      "0.75108849742\n",
+      "4.343164920806885\n"
      ]
     }
    ],
@@ -519,26 +476,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.54285714285714282,\n",
-       " 0.89523809523809528,\n",
-       " 0.89523809523809528,\n",
-       " 0.89523809523809528,\n",
-       " 0.5714285714285714,\n",
-       " 0.5714285714285714]"
+       "[0.69054827106065841,\n",
+       " 0.84726391060604256,\n",
+       " 0.84726391060604256,\n",
+       " 0.84726391060604256,\n",
+       " 0.88574209259747094,\n",
+       " 0.67286625768733155]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#0.691 ##0.665 0.738 0.765## 0.764 0.764 0.764 0.886 0.673\n",
     "iris5data = []\n",
     "for i in range(1,7):\n",
     "    if (i==1):\n",
@@ -550,21 +508,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# só executar da primeira vez\n",
+    "#só executar da primeira vez\n",
     "\n",
-    "# result = pd.DataFrame(columns = [\"single\",\"gini_02\",\"gini_03\",\"gini_04\",\"gini_05\",\"gini_06\"])\n",
-    "# result.loc[0] = iris5data\n",
-    "# result = result.rename({0:'iris5'})\n",
-    "# result.to_csv(\"results/result.csv\")"
+    "result = pd.DataFrame(columns = [\"single\",\"gini_02\",\"gini_03\",\"gini_04\",\"gini_05\",\"gini_06\"])\n",
+    "result.loc[0] = iris5data\n",
+    "result = result.rename({0:'iris5'})\n",
+    "result.to_csv(\"results/result.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 241,
    "metadata": {
     "collapsed": true
    },
@@ -592,16 +550,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
-    "computeScore(\"iris\")"
+    "computeScore(\"iris\")\n",
+    "#computeScore(\"Aggregation\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "computeScore(\"flame\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -636,43 +604,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>iris5</th>\n",
-       "      <td>0.542857</td>\n",
-       "      <td>0.895238</td>\n",
-       "      <td>0.895238</td>\n",
-       "      <td>0.895238</td>\n",
-       "      <td>0.571429</td>\n",
-       "      <td>0.571429</td>\n",
+       "      <td>0.690548</td>\n",
+       "      <td>0.847264</td>\n",
+       "      <td>0.847264</td>\n",
+       "      <td>0.847264</td>\n",
+       "      <td>0.885742</td>\n",
+       "      <td>0.672866</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>iris</th>\n",
-       "      <td>0.680000</td>\n",
-       "      <td>0.960000</td>\n",
-       "      <td>0.960000</td>\n",
-       "      <td>0.960000</td>\n",
-       "      <td>0.700000</td>\n",
-       "      <td>0.693333</td>\n",
+       "      <td>0.763517</td>\n",
+       "      <td>0.923434</td>\n",
+       "      <td>0.923434</td>\n",
+       "      <td>0.923434</td>\n",
+       "      <td>0.753795</td>\n",
+       "      <td>0.753795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Aggregation</th>\n",
-       "      <td>0.827411</td>\n",
-       "      <td>0.790609</td>\n",
-       "      <td>0.847716</td>\n",
-       "      <td>0.870558</td>\n",
-       "      <td>0.911168</td>\n",
-       "      <td>0.827411</td>\n",
+       "      <th>flame</th>\n",
+       "      <td>0.730024</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               single   gini_02   gini_03   gini_04   gini_05   gini_06\n",
-       "iris5        0.542857  0.895238  0.895238  0.895238  0.571429  0.571429\n",
-       "iris         0.680000  0.960000  0.960000  0.960000  0.700000  0.693333\n",
-       "Aggregation  0.827411  0.790609  0.847716  0.870558  0.911168  0.827411"
+       "         single   gini_02   gini_03   gini_04   gini_05   gini_06\n",
+       "iris5  0.690548  0.847264  0.847264  0.847264  0.885742  0.672866\n",
+       "iris   0.763517  0.923434  0.923434  0.923434  0.753795  0.753795\n",
+       "flame  0.730024  1.000000  1.000000  1.000000  1.000000  1.000000"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,21 +652,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 174,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.54807692307692313"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "computeScore(\"Aggregation\")"
+    "gini(counting(unbalancelabels[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6263736263736264"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gini2(counting(unbalancelabels[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.cluster.hierarchy import linkage\n",
+    "from scipy.cluster.hierarchy import fcluster"
+   ]
   }
  ],
  "metadata": {
