--- a/Genie.ipynb
+++ b/Genie.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -15,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.spatial.distance import squareform, pdist"
@@ -26,9 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.sparse.csgraph import minimum_spanning_tree"
@@ -37,9 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.cluster.hierarchy import dendrogram, linkage\n",
@@ -49,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys"
@@ -60,9 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics.pairwise import pairwise_distances"
@@ -71,9 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import f1_score"
@@ -81,10 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics.cluster import fowlkes_mallows_score"
@@ -92,21 +76,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from scipy.cluster.hierarchy import linkage\n",
+    "from scipy.cluster.hierarchy import fcluster\n",
+    "from scipy.cluster.hierarchy import cut_tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def labelClusters2(clusters, target, data):\n",
@@ -155,10 +138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def labelClusters(clusters, target):\n",
@@ -185,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +175,7 @@
        "2"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,10 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def gini2(arr):\n",
@@ -228,10 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def counting(arr):\n",
@@ -251,30 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 3, 5]"
-      ]
-     },
-     "execution_count": 251,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "menorCluster([0,9,0,9,0,9,0])"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def menorCluster(clusters):\n",
@@ -296,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,10 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def genie2(dataset, target, limiar, clusterNumber):\n",
@@ -393,25 +353,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [],
    "source": [
     "a1 = pd.read_table(\"datasets/a1.data\", header=None, delim_whitespace=True)\n",
     "iris5 = pd.read_table(\"datasets/iris5.data\", header=None, delim_whitespace=True)\n",
     "flame = pd.read_table(\"datasets/flame.data\", header=None, delim_whitespace=True)\n",
     "pathbased = pd.read_table(\"datasets/pathbased.data\", header=None, delim_whitespace=True)\n",
-    "unbalance = pd.read_table(\"datasets/unbalance.data\", header=None, delim_whitespace=True)"
+    "unbalance = pd.read_table(\"datasets/unbalance.data\", header=None, delim_whitespace=True)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [],
    "source": [
     "a1labels = pd.read_table(\"labels/a1.labels\", header=None, delim_whitespace=True)\n",
@@ -424,9 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import time"
@@ -434,18 +389,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.847263910606\n",
-      "0.3553299903869629\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t1 = time.time()\n",
     "print(genie2(iris5, iris5labels, 0.3, 3))\n",
@@ -455,18 +401,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.75108849742\n",
-      "4.343164920806885\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t1 = time.time()\n",
     "print(genie2(pathbased, pathbasedlabels, 0.6, 3))\n",
@@ -476,25 +413,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.69054827106065841,\n",
-       " 0.84726391060604256,\n",
-       " 0.84726391060604256,\n",
-       " 0.84726391060604256,\n",
-       " 0.88574209259747094,\n",
-       " 0.67286625768733155]"
-      ]
-     },
-     "execution_count": 239,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#0.691 ##0.665 0.738 0.765## 0.764 0.764 0.764 0.886 0.673\n",
     "iris5data = []\n",
@@ -508,26 +429,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "#só executar da primeira vez\n",
     "\n",
-    "result = pd.DataFrame(columns = [\"single\",\"gini_02\",\"gini_03\",\"gini_04\",\"gini_05\",\"gini_06\"])\n",
-    "result.loc[0] = iris5data\n",
-    "result = result.rename({0:'iris5'})\n",
+    "result = pd.DataFrame(columns = [\"single\",\"complete\", \"ward\", \"average\",\"gini_02\",\"gini_03\",\"gini_04\",\"gini_05\",\"gini_06\"])\n",
+    "# result.loc[0] = iris5data\n",
+    "# result = result.rename({0:'iris5'})\n",
     "result.to_csv(\"results/result.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "def linkageScore(method, data, labels, k):\n",
+    "    dataDistances = pairwise_distances(data, metric='euclidean')\n",
+    "\n",
+    "#     clusters = linkage(dataDistances, method=method)\n",
+    "#     kClusters = cut_tree(clusters, [k]).flatten()\n",
+    "    \n",
+    "    agg = AgglomerativeClustering(n_clusters=k, linkage=method)\n",
+    "    kClusters = agg.fit_predict(dataDistances)\n",
+    "    resultLabels = labelClusters(kClusters, labels)\n",
+    "    fmScore = fowlkes_mallows_score(labels, resultLabels)\n",
+    "    return fmScore\n",
+    "\n",
     "def computeScore(base):\n",
     "    result = pd.read_csv(\"results/result.csv\", index_col=0)\n",
     "    \n",
@@ -539,8 +470,12 @@
     "    for i in range(1,7):\n",
     "        if (i==1):\n",
     "            resultData.append((genie2(data, labels, 1, k)))\n",
+    "            methods = [\"complete\", \"ward\", \"average\"]\n",
+    "            for method in methods:\n",
+    "                resultData.append(linkageScore(method, data, labels[0], k))\n",
     "        else:\n",
     "            resultData.append((genie2(data, labels, i/10, k)))\n",
+    "    \n",
     "    \n",
     "    size = len(result)\n",
     "    result.loc[size] = resultData\n",
@@ -550,43 +485,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "computeScore(\"iris\")\n",
+    "computeScore(\"a1\")\n",
     "#computeScore(\"Aggregation\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "computeScore(\"flame\")"
+    "computeScore(\"Compound\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -594,6 +529,9 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>single</th>\n",
+       "      <th>complete</th>\n",
+       "      <th>ward</th>\n",
+       "      <th>average</th>\n",
        "      <th>gini_02</th>\n",
        "      <th>gini_03</th>\n",
        "      <th>gini_04</th>\n",
@@ -605,6 +543,9 @@
        "    <tr>\n",
        "      <th>iris5</th>\n",
        "      <td>0.690548</td>\n",
+       "      <td>0.642412</td>\n",
+       "      <td>0.737836</td>\n",
+       "      <td>0.655140</td>\n",
        "      <td>0.847264</td>\n",
        "      <td>0.847264</td>\n",
        "      <td>0.847264</td>\n",
@@ -614,6 +555,9 @@
        "    <tr>\n",
        "      <th>iris</th>\n",
        "      <td>0.763517</td>\n",
+       "      <td>0.743081</td>\n",
+       "      <td>0.849796</td>\n",
+       "      <td>0.849796</td>\n",
        "      <td>0.923434</td>\n",
        "      <td>0.923434</td>\n",
        "      <td>0.923434</td>\n",
@@ -621,7 +565,22 @@
        "      <td>0.753795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>jain</th>\n",
+       "      <td>0.803783</td>\n",
+       "      <td>0.717912</td>\n",
+       "      <td>0.783654</td>\n",
+       "      <td>0.910338</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>flame</th>\n",
+       "      <td>0.730024</td>\n",
+       "      <td>0.732037</td>\n",
+       "      <td>0.666356</td>\n",
        "      <td>0.730024</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -629,18 +588,67 @@
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>R15</th>\n",
+       "      <td>0.645799</td>\n",
+       "      <td>0.966536</td>\n",
+       "      <td>0.979881</td>\n",
+       "      <td>0.986543</td>\n",
+       "      <td>0.986585</td>\n",
+       "      <td>0.986585</td>\n",
+       "      <td>0.986585</td>\n",
+       "      <td>0.833672</td>\n",
+       "      <td>0.645799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>spiral</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.362340</td>\n",
+       "      <td>0.421129</td>\n",
+       "      <td>0.445392</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pathbased</th>\n",
+       "      <td>0.573425</td>\n",
+       "      <td>0.646776</td>\n",
+       "      <td>0.652847</td>\n",
+       "      <td>0.666374</td>\n",
+       "      <td>0.751088</td>\n",
+       "      <td>0.751088</td>\n",
+       "      <td>0.751088</td>\n",
+       "      <td>0.751088</td>\n",
+       "      <td>0.751088</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         single   gini_02   gini_03   gini_04   gini_05   gini_06\n",
-       "iris5  0.690548  0.847264  0.847264  0.847264  0.885742  0.672866\n",
-       "iris   0.763517  0.923434  0.923434  0.923434  0.753795  0.753795\n",
-       "flame  0.730024  1.000000  1.000000  1.000000  1.000000  1.000000"
+       "             single  complete      ward   average   gini_02   gini_03  \\\n",
+       "iris5      0.690548  0.642412  0.737836  0.655140  0.847264  0.847264   \n",
+       "iris       0.763517  0.743081  0.849796  0.849796  0.923434  0.923434   \n",
+       "jain       0.803783  0.717912  0.783654  0.910338  1.000000  1.000000   \n",
+       "flame      0.730024  0.732037  0.666356  0.730024  1.000000  1.000000   \n",
+       "R15        0.645799  0.966536  0.979881  0.986543  0.986585  0.986585   \n",
+       "spiral     1.000000  0.362340  0.421129  0.445392  1.000000  1.000000   \n",
+       "pathbased  0.573425  0.646776  0.652847  0.666374  0.751088  0.751088   \n",
+       "\n",
+       "            gini_04   gini_05   gini_06  \n",
+       "iris5      0.847264  0.885742  0.672866  \n",
+       "iris       0.923434  0.753795  0.753795  \n",
+       "jain       1.000000  1.000000  1.000000  \n",
+       "flame      1.000000  1.000000  1.000000  \n",
+       "R15        0.986585  0.833672  0.645799  \n",
+       "spiral     1.000000  1.000000  1.000000  \n",
+       "pathbased  0.751088  0.751088  0.751088  "
       ]
      },
-     "execution_count": 244,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,53 +660,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.54807692307692313"
-      ]
-     },
-     "execution_count": 174,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gini(counting(unbalancelabels[0]))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6263736263736264"
-      ]
-     },
-     "execution_count": 175,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gini2(counting(unbalancelabels[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.cluster.hierarchy import linkage\n",
-    "from scipy.cluster.hierarchy import fcluster"
+    "dataDistances = pairwise_distances(iris5,metric='euclidean')\n",
+    "Z = linkage(dataDistances, 'ward')\n",
+    "# plt.figure(figsize=(25, 10))\n",
+    "# plt.title('Hierarchical Clustering Dendrogram')\n",
+    "# plt.xlabel('sample index')\n",
+    "# plt.ylabel('distance')\n",
+    "# dendrogram(\n",
+    "#     Z,\n",
+    "#     leaf_rotation=90.,  # rotates the x axis labels\n",
+    "#     leaf_font_size=8.,  # font size for the x axis labels\n",
+    "# )\n",
+    "# plt.show()\n",
+    "\n",
+    "Z = cut_tree(Z, n_clusters=[10,1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import AgglomerativeClustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 3, 3, 3, 3, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 1,\n",
+       "       0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 2, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0,\n",
+       "       0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 2, 1, 2, 2, 2, 4, 0, 4, 2, 4, 2,\n",
+       "       2, 2, 1, 1, 2, 2, 4, 4, 1, 2, 1, 4, 1, 2, 2, 1, 1, 2, 2, 4, 4, 2,\n",
+       "       1, 1, 4, 2, 2, 1, 2, 2, 2, 1, 2, 2, 2, 1, 2, 2, 1])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataDistances = pairwise_distances(iris5, metric='euclidean')\n",
+    "agg = AgglomerativeClustering(n_clusters=5, linkage='ward')\n",
+    "l = agg.fit_predict(dataDistances)\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -717,7 +763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
