--- a/Genie.ipynb
+++ b/Genie.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -15,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.spatial.distance import squareform, pdist"
@@ -26,9 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.sparse.csgraph import minimum_spanning_tree"
@@ -37,9 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.cluster.hierarchy import dendrogram, linkage\n",
@@ -49,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys"
@@ -60,9 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics.pairwise import pairwise_distances"
@@ -71,9 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import f1_score"
@@ -82,9 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics.cluster import fowlkes_mallows_score"
@@ -93,9 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -106,10 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.cluster import AgglomerativeClustering"
@@ -117,10 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def labelClusters(clusters, target):\n",
@@ -147,10 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def gini2(arr):\n",
@@ -170,10 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def counting(arr):\n",
@@ -193,10 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def menorCluster(clusters):\n",
@@ -218,10 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def genieLinkage2(data, limiar, clusterNumber):\n",
@@ -287,28 +257,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def genie2(dataset, target, limiar, clusterNumber):\n",
-    "    \n",
-    "#     dataX = dataset.loc[:,dataset.columns[:-1]].values\n",
-    "#     dataY = dataset.loc[:,[dataset.columns[-1]]].values\n",
+    "\n",
     "    dataX = dataset.values\n",
     "    dataY = target[0]\n",
     "    \n",
     "    dataDistances = pairwise_distances(dataX,metric='euclidean')\n",
-    "    #making all the diagonal elements infinity \n",
     "    np.fill_diagonal(dataDistances,sys.maxsize)\n",
     "    \n",
     "    clusters = genieLinkage2(dataDistances, limiar, clusterNumber)\n",
     "    \n",
     "    labels = labelClusters(clusters, dataY)\n",
     "    \n",
-    "    #fmScore = f1_score(dataY, labels, average='micro')\n",
     "    fmScore = fowlkes_mallows_score(dataY, labels)\n",
     "    \n",
     "    return fmScore"
@@ -316,10 +280,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "a1 = pd.read_table(\"datasets/a1.data\", header=None, delim_whitespace=True)\n",
@@ -331,10 +293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "a1labels = pd.read_table(\"labels/a1.labels\", header=None, delim_whitespace=True)\n",
@@ -346,77 +306,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.69054827106065841,\n",
-       " 0.84726391060604256,\n",
-       " 0.84726391060604256,\n",
-       " 0.84726391060604256,\n",
-       " 0.88574209259747094,\n",
-       " 0.67286625768733155]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#0.691 ##0.665 0.738 0.765## 0.764 0.764 0.764 0.886 0.673\n",
-    "iris5data = []\n",
-    "for i in range(1,7):\n",
-    "    if (i==1):\n",
-    "        iris5data.append((genie2(iris5, iris5labels, 1, 3)))\n",
-    "    else:\n",
-    "        iris5data.append((genie2(iris5, iris5labels, i/10, 3)))\n",
-    "iris5data"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#só executar da primeira vez\n",
+    "#só executar para limpar os results\n",
     "\n",
-    "# result = pd.DataFrame(columns = [\"single\",\"complete\", \"ward\", \"average\",\"gini_02\",\"gini_03\",\"gini_04\",\"gini_05\",\"gini_06\"])\n",
-    "# # result.loc[0] = iris5data\n",
-    "# # result = result.rename({0:'iris5'})\n",
-    "# result.to_csv(\"results/result.csv\")"
+    "result = pd.DataFrame(columns = [\"single\",\"complete\", \"ward\", \"average\",\"gini_02\",\"gini_03\",\"gini_04\",\"gini_05\",\"gini_06\"])\n",
+    "result.to_csv(\"results/result.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def linkageScore(method, data, labels, k):\n",
     "    dataDistances = pairwise_distances(data, metric='euclidean')\n",
-    "\n",
-    "#     clusters = linkage(dataDistances, method=method)\n",
-    "#     kClusters = cut_tree(clusters, [k]).flatten()\n",
-    "    \n",
     "    agg = AgglomerativeClustering(n_clusters=k, linkage=method)\n",
     "    kClusters = agg.fit_predict(dataDistances)\n",
     "    resultLabels = labelClusters(kClusters, labels)\n",
@@ -455,225 +362,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ajgan/anaconda/lib/python3.6/site-packages/sklearn/cluster/hierarchical.py:410: ClusterWarning: scipy.cluster: The symmetric non-negative hollow observation matrix looks suspiciously like an uncondensed distance matrix\n",
-      "  out = hierarchy.linkage(X, method=linkage, metric=affinity)\n",
-      "/Users/ajgan/anaconda/lib/python3.6/site-packages/scipy/cluster/hierarchy.py:471: ClusterWarning: scipy.cluster: The symmetric non-negative hollow observation matrix looks suspiciously like an uncondensed distance matrix\n",
-      "  return linkage(y, method='ward', metric='euclidean')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "computeScore(\"iris\")\n",
-    "computeScore(\"jain\")\n",
     "computeScore(\"flame\")\n",
-    "computeScore(\"R15\")\n",
-    "computeScore(\"spiral\")\n",
-    "computeScore(\"pathbased\")\n",
-    "computeScore(\"Compound\")\n",
-    "computeScore(\"Aggregation\")\n",
-    "computeScore(\"g2-2-100\")"
+    "# computeScore(\"jain\")\n",
+    "# computeScore(\"flame\")\n",
+    "# computeScore(\"R15\")\n",
+    "# computeScore(\"spiral\")\n",
+    "# computeScore(\"pathbased\")\n",
+    "# computeScore(\"Compound\")\n",
+    "# computeScore(\"Aggregation\")\n",
+    "# computeScore(\"g2-2-100\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>single</th>\n",
-       "      <th>complete</th>\n",
-       "      <th>ward</th>\n",
-       "      <th>average</th>\n",
-       "      <th>gini_02</th>\n",
-       "      <th>gini_03</th>\n",
-       "      <th>gini_04</th>\n",
-       "      <th>gini_05</th>\n",
-       "      <th>gini_06</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>iris5</th>\n",
-       "      <td>0.690548</td>\n",
-       "      <td>0.642412</td>\n",
-       "      <td>0.737836</td>\n",
-       "      <td>0.655140</td>\n",
-       "      <td>0.847264</td>\n",
-       "      <td>0.847264</td>\n",
-       "      <td>0.847264</td>\n",
-       "      <td>0.885742</td>\n",
-       "      <td>0.672866</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>iris</th>\n",
-       "      <td>0.763517</td>\n",
-       "      <td>0.743081</td>\n",
-       "      <td>0.849796</td>\n",
-       "      <td>0.849796</td>\n",
-       "      <td>0.923434</td>\n",
-       "      <td>0.923434</td>\n",
-       "      <td>0.923434</td>\n",
-       "      <td>0.753795</td>\n",
-       "      <td>0.753795</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>jain</th>\n",
-       "      <td>0.803783</td>\n",
-       "      <td>0.717912</td>\n",
-       "      <td>0.783654</td>\n",
-       "      <td>0.910338</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>flame</th>\n",
-       "      <td>0.730024</td>\n",
-       "      <td>0.732037</td>\n",
-       "      <td>0.666356</td>\n",
-       "      <td>0.730024</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>R15</th>\n",
-       "      <td>0.645799</td>\n",
-       "      <td>0.966536</td>\n",
-       "      <td>0.979881</td>\n",
-       "      <td>0.986543</td>\n",
-       "      <td>0.986585</td>\n",
-       "      <td>0.986585</td>\n",
-       "      <td>0.986585</td>\n",
-       "      <td>0.833672</td>\n",
-       "      <td>0.645799</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>spiral</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.362340</td>\n",
-       "      <td>0.421129</td>\n",
-       "      <td>0.445392</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pathbased</th>\n",
-       "      <td>0.573425</td>\n",
-       "      <td>0.646776</td>\n",
-       "      <td>0.652847</td>\n",
-       "      <td>0.666374</td>\n",
-       "      <td>0.751088</td>\n",
-       "      <td>0.751088</td>\n",
-       "      <td>0.751088</td>\n",
-       "      <td>0.751088</td>\n",
-       "      <td>0.751088</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Compound</th>\n",
-       "      <td>0.830510</td>\n",
-       "      <td>0.810034</td>\n",
-       "      <td>0.828980</td>\n",
-       "      <td>0.884514</td>\n",
-       "      <td>0.839257</td>\n",
-       "      <td>0.854752</td>\n",
-       "      <td>0.854752</td>\n",
-       "      <td>0.854752</td>\n",
-       "      <td>0.898227</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Aggregation</th>\n",
-       "      <td>0.865244</td>\n",
-       "      <td>0.981332</td>\n",
-       "      <td>0.986433</td>\n",
-       "      <td>0.952680</td>\n",
-       "      <td>0.789735</td>\n",
-       "      <td>0.820204</td>\n",
-       "      <td>0.873580</td>\n",
-       "      <td>0.908135</td>\n",
-       "      <td>0.913825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>g2-2-100</th>\n",
-       "      <td>0.706589</td>\n",
-       "      <td>0.624015</td>\n",
-       "      <td>0.614138</td>\n",
-       "      <td>0.692190</td>\n",
-       "      <td>0.601259</td>\n",
-       "      <td>0.601259</td>\n",
-       "      <td>0.637314</td>\n",
-       "      <td>0.647604</td>\n",
-       "      <td>0.647604</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               single  complete      ward   average   gini_02   gini_03  \\\n",
-       "iris5        0.690548  0.642412  0.737836  0.655140  0.847264  0.847264   \n",
-       "iris         0.763517  0.743081  0.849796  0.849796  0.923434  0.923434   \n",
-       "jain         0.803783  0.717912  0.783654  0.910338  1.000000  1.000000   \n",
-       "flame        0.730024  0.732037  0.666356  0.730024  1.000000  1.000000   \n",
-       "R15          0.645799  0.966536  0.979881  0.986543  0.986585  0.986585   \n",
-       "spiral       1.000000  0.362340  0.421129  0.445392  1.000000  1.000000   \n",
-       "pathbased    0.573425  0.646776  0.652847  0.666374  0.751088  0.751088   \n",
-       "Compound     0.830510  0.810034  0.828980  0.884514  0.839257  0.854752   \n",
-       "Aggregation  0.865244  0.981332  0.986433  0.952680  0.789735  0.820204   \n",
-       "g2-2-100     0.706589  0.624015  0.614138  0.692190  0.601259  0.601259   \n",
-       "\n",
-       "              gini_04   gini_05   gini_06  \n",
-       "iris5        0.847264  0.885742  0.672866  \n",
-       "iris         0.923434  0.753795  0.753795  \n",
-       "jain         1.000000  1.000000  1.000000  \n",
-       "flame        1.000000  1.000000  1.000000  \n",
-       "R15          0.986585  0.833672  0.645799  \n",
-       "spiral       1.000000  1.000000  1.000000  \n",
-       "pathbased    0.751088  0.751088  0.751088  \n",
-       "Compound     0.854752  0.854752  0.898227  \n",
-       "Aggregation  0.873580  0.908135  0.913825  \n",
-       "g2-2-100     0.637314  0.647604  0.647604  "
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = pd.read_csv(\"results/result.csv\", index_col=0)\n",
     "result"
@@ -682,9 +390,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = pd.concat([iris5, iris5labels], axis=1)\n",
+    "print('iris5')\n",
+    "result = {}\n",
+    "for i in range(10):\n",
+    "    b = a.sample(frac=1)\n",
+    "    c = b.iloc[:, :-1]\n",
+    "    d = b.iloc[:, -1:]\n",
+    "    k = len(set(d[0]))\n",
+    "    print('complete ', linkageScore(\"complete\", c, d[0], k),'ward ', linkageScore('ward', c, d[0], k),'average ', linkageScore('average', c, d[0], k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -705,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
